tests/baselines/reference/parservoidInQualifiedName1.errors.txt
tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName1.ts(1,9): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName1.ts(1,13): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName1.ts (2 errors) ====
    var v : void.x;
            ~~~~
!!! error TS1003: Identifier expected.
                ~
!!! error TS1109: Expression expected.